--- a/WebServicesFigaro/Views/ZonaMvc/Delete.cshtml
+++ b/WebServicesFigaro/Views/ZonaMvc/Delete.cshtml
@@ -19,6 +19,14 @@
             @Html.DisplayFor(model => model.Titulo)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.ImagenFondo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ImagenFondo)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
