--- a/WebServicesFigaro/Views/ZonaMvc/Index.cshtml
+++ b/WebServicesFigaro/Views/ZonaMvc/Index.cshtml
@@ -17,6 +17,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Titulo)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ImagenFondo)
+        </th>
         <th></th>
     </tr>
 
@@ -27,6 +30,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Titulo)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ImagenFondo)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
