--- a/Figaro/Figaro/Views/VerChef.xaml
+++ b/Figaro/Figaro/Views/VerChef.xaml
@@ -5,62 +5,98 @@
              BindingContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
              Title="Chef">
-
-  <StackLayout Orientation="Vertical"
-             Spacing="18" VerticalOptions="FillAndExpand">
-    <Grid>
-      <Grid.RowDefinitions>
-        <RowDefinition Height="200"/>
-        <RowDefinition Height="50"/>
-        <!--<RowDefinition Height="5*"/>-->
-      </Grid.RowDefinitions>
-      <RelativeLayout Padding="0,0,0,0" Grid.Row="0">
-        <Image Source="{Binding ChefSeleccionado.ImagenFondo}"
-               RelativeLayout.WidthConstraint=
-                          "{ConstraintExpression Type=RelativeToParent, Property=Width}"
-               RelativeLayout.HeightConstraint=
-                      "{ConstraintExpression Type=RelativeToParent, Property=Height}"
-               Aspect="AspectFill"
-                        />
-        <Grid RelativeLayout.WidthConstraint=
-                      "{ConstraintExpression Type=RelativeToParent, Property=Width}"
-                RelativeLayout.HeightConstraint=
-                      "{ConstraintExpression Type=RelativeToParent, Property=Height}">
-          <controls:CircleImage Source="{Binding ChefSeleccionado.Imagen}" WidthRequest="70.0"
-                                    HeightRequest="70.0" Aspect="AspectFill" 
-                                VerticalOptions="Start" HorizontalOptions="Center"/>
-          <Label Text="{Binding ChefSeleccionado.NombreApellidos}" VerticalOptions="End"
-              HorizontalOptions="StartAndExpand" FontSize="30" TextColor="White" Opacity="0.8"
-              TranslationX="10" TranslationY="-10"/>
-          <Grid VerticalOptions="End" HorizontalOptions="End" TranslationX="-10" TranslationY="-10" >
-            <Grid.RowDefinitions>
-              <RowDefinition Height="24"/>
-              <RowDefinition Height="24"/>
-            </Grid.RowDefinitions>
-            <!--Stars Rating-->
-            <StackLayout Orientation="Horizontal" HeightRequest="70" Grid.Row="0">
-              <Grid>
-                <Grid.ColumnDefinitions>
-                  <ColumnDefinition Width="*"/>
-                  <ColumnDefinition Width="*"/>
-                  <ColumnDefinition Width="*"/>
-                  <ColumnDefinition Width="*"/>
-                  <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Image x:Name="starOne" HeightRequest="18" Grid.Column="0"/>
-                <Image x:Name="starTwo" HeightRequest="18" Grid.Column="1"/>
-                <Image x:Name="starThree" HeightRequest="18" Grid.Column="2"/>
-                <Image x:Name="starFour" HeightRequest="18" Grid.Column="3"/>
-                <Image x:Name="starFive" HeightRequest="18" Grid.Column="4"/>
-              </Grid>
-            </StackLayout>
+  <ScrollView>
+    <StackLayout Orientation="Vertical"
+               Spacing="18" VerticalOptions="FillAndExpand">
+      <Grid>
+        <Grid.RowDefinitions>
+          <RowDefinition Height="200"/>
+          <RowDefinition Height="50"/>
+          <!--<RowDefinition Height="5*"/>-->
+        </Grid.RowDefinitions>
+        <RelativeLayout Padding="0,0,0,0" Grid.Row="0">
+          <Image Source="{Binding ChefSeleccionado.ImagenFondo}"
+                 RelativeLayout.WidthConstraint=
+                            "{ConstraintExpression Type=RelativeToParent, Property=Width}"
+                 RelativeLayout.HeightConstraint=
+                        "{ConstraintExpression Type=RelativeToParent, Property=Height}"
+                 Aspect="AspectFill"
+                          />
+          <Grid RelativeLayout.WidthConstraint=
+                        "{ConstraintExpression Type=RelativeToParent, Property=Width}"
+                  RelativeLayout.HeightConstraint=
+                        "{ConstraintExpression Type=RelativeToParent, Property=Height}">
+            <controls:CircleImage Source="{Binding ChefSeleccionado.Imagen}" WidthRequest="70.0"
+                                      HeightRequest="70.0" Aspect="AspectFill" 
+                                  VerticalOptions="Start" HorizontalOptions="Center"/>
+            <Label Text="{Binding ChefSeleccionado.NombreApellidos}" VerticalOptions="End"
+                HorizontalOptions="StartAndExpand" FontSize="30" TextColor="White" Opacity="0.8"
+                TranslationX="10" TranslationY="-10" WidthRequest="200"/>
+            <Grid VerticalOptions="End" HorizontalOptions="End" TranslationX="-10" TranslationY="-10" >
+              <Grid.RowDefinitions>
+                <RowDefinition Height="24"/>
+                <RowDefinition Height="24"/>
+              </Grid.RowDefinitions>
+              <!--Stars Rating-->
+              <StackLayout Orientation="Horizontal" HeightRequest="70" Grid.Row="0">
+                <Grid>
+                  <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                  </Grid.ColumnDefinitions>
+                  <Image x:Name="starOne" HeightRequest="18" Grid.Column="0"/>
+                  <Image x:Name="starTwo" HeightRequest="18" Grid.Column="1"/>
+                  <Image x:Name="starThree" HeightRequest="18" Grid.Column="2"/>
+                  <Image x:Name="starFour" HeightRequest="18" Grid.Column="3"/>
+                  <Image x:Name="starFive" HeightRequest="18" Grid.Column="4"/>
+                </Grid>
+              </StackLayout>
+            </Grid>
           </Grid>
-        </Grid>
-      </RelativeLayout>
-      <StackLayout BackgroundColor="#eee" Padding="0,0,0,0" Grid.Row="1">
-        <Button BackgroundColor="#CC0311" VerticalOptions="End" Text="Elegir chef" TextColor="White"/>
+        </RelativeLayout>
+        <StackLayout BackgroundColor="#eee" Padding="0,0,0,0" Grid.Row="1">
+          <Button BackgroundColor="#CC0311" VerticalOptions="Center" Text="Elegir chef"
+                  TextColor="White" Clicked="Elegir_OnClick"/>
+        </StackLayout>
+      </Grid>
+
+      <StackLayout Padding="10,0">
+        <Label Text="{Binding ChefSeleccionado.Subtitulo}" FontSize="20"/>
+        <Label Text="Descripción" FontSize="24" />
+        <Label Text="{Binding ChefSeleccionado.Descripcion}" FontSize="14" />
+        <Label Text="Tipo de Cocina" FontSize="24" />
+        <Label Text="{Binding ChefSeleccionado.TipoCocina.Titulo}" FontSize="14" />
+        <Label Text="" FontSize="24" />
+        <Label Text="{Binding ChefSeleccionado.Edad}" FontSize="14" />
+        <Label Text="Ciudad/Zona" FontSize="24" />
+        <Label Text="{Binding ChefSeleccionado.Zona.Titulo}" FontSize="14" />
       </StackLayout>
-    </Grid>
-  </StackLayout>
-  
+
+      <ScrollView Orientation="Vertical" VerticalOptions="FillAndExpand">
+        <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand">
+          <Grid x:Name="GridTab" Padding="0,14,0,0">
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="*"/>
+              <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Label x:Name="DisponibilidadTab" Text="DISPONIBILIDAD" FontSize="14"
+                    FontAttributes="Bold" TextColor="#CC0311"  Grid.Column="0" HorizontalOptions="Center"/>
+            <Label x:Name="OpinionesTab" Text="OPINIONES" FontSize="14"
+                    FontAttributes="None"  Grid.Column="1" HorizontalOptions="Center"/>
+            <BoxView x:Name="LineaDisponibilidadTab" Color="#CC0311" HeightRequest="0.5"
+                      VerticalOptions="End" Grid.Column="0" IsVisible="True"/>
+            <BoxView x:Name="LineaOpinionesTab" Color="#CC0311" HeightRequest="0.5"
+                      VerticalOptions="End" Grid.Column="1" IsVisible="False"/>
+          </Grid>
+          <Label x:Name="TabAMostrar" Text="-----------POR HACER-----------" FontSize="14" Opacity="0.7"
+                 TranslationX="10" TranslationY="14"
+                 HeightRequest="100"/>
+        </StackLayout>
+      </ScrollView>
+      
+    </StackLayout>
+  </ScrollView>
 </ContentPage>
