--- a/Figaro/Figaro/Views/VerMenu.xaml
+++ b/Figaro/Figaro/Views/VerMenu.xaml
@@ -94,12 +94,17 @@
               </Picker.Items>
               <Picker.SelectedIndex>0</Picker.SelectedIndex>
             </Picker>
-            <Button BackgroundColor="#CC0311" Grid.Column="2" VerticalOptions="Center" Text="Añadir" TextColor="White">
+            <Button BackgroundColor="#CC0311" Grid.Column="2" VerticalOptions="Center"
+                    Text="Añadir" TextColor="White" Clicked="Anadir_OnClick">
               <!--<Label FontSize="36" Text="ADD" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White"/>-->
             </Button>
           </Grid>
         </StackLayout>
       </Grid>
+
+      <StackLayout>
+        <Label Text="{Binding MenuSeleccionado.Descripcion}" FontSize="14" TranslationX="10"/>
+      </StackLayout>
       
       <StackLayout x:Name="Entrante" IsVisible="False">
         <Label Text="Entrante" FontSize="24" Margin="10,0,0,0"/>
@@ -223,7 +228,6 @@
 
       <ScrollView Orientation="Vertical" VerticalOptions="FillAndExpand">
         <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand">
-          <Label Text="{Binding MenuSeleccionado.Descripcion}" FontSize="14" TranslationX="10"/>
           <Grid x:Name="GridTab" Padding="0,14,0,0">
             <Grid.ColumnDefinitions>
               <ColumnDefinition Width="*"/>
