Ver Carrito y API y Mvc ComentariosChef

--- a/Figaro/Figaro/Views/ChefsPage.xaml
+++ b/Figaro/Figaro/Views/ChefsPage.xaml
@@ -19,7 +19,7 @@
               ItemsSource="{Binding ListaChefs}"
 		          HasUnevenRows="true"
               ItemTapped="ListView_OnItemTapped">
-      <ListView.ItemTemplate>
+      <ListView.ItemTemplate HorizontalContentAlignment="Stretch">
         <DataTemplate>
           <ViewCell>
             <StackLayout Orientation="Horizontal" Padding="12,6">
@@ -27,31 +27,32 @@
                                     HeightRequest="70.0" Aspect="AspectFill" />
               <Grid Padding="10,0,0,0">
                 <Grid.RowDefinitions>
-                  <RowDefinition Height="*"/>
-                  <RowDefinition Height="*"/>
+                  <RowDefinition Height="Auto"/>
+                  <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                  <ColumnDefinition Width="2*"/>
+                  <ColumnDefinition Width="Auto"/>
                   <ColumnDefinition Width="*"/>
+                  <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Label Text="{Binding NombreApellidos}"
                         FontSize="24"
                         Grid.Row="0"
                         Grid.Column="0"/>
+                <!--Star rating-->
+                <Label Text="Rating stars" HorizontalOptions="EndAndExpand" Grid.Row="0" Grid.Column="2" />
                 <Label Text="{Binding Subtitulo}"
                         FontSize="16"
                         Opacity="0.6"
                         Grid.Row="1"
-                        Grid.Column="0"/>
-                <!--Star rating-->
+                        Grid.Column="0" HorizontalOptions="StartAndExpand"/>
                 <Image ClassId="{Binding Id}" Source="add.png"
-                          WidthRequest="20" HeightRequest="20" Aspect="AspectFill"
-                          Grid.Row="1" Grid.Column="2">
+                          WidthRequest="40" HeightRequest="40" Aspect="AspectFill"
+                        Grid.Row="1" Grid.Column="2" HorizontalOptions="EndAndExpand">
                   <Image.GestureRecognizers>
                     <TapGestureRecognizer Tapped="ElegirChef_OnTapped"/>
                   </Image.GestureRecognizers>
                 </Image>
-
               </Grid>
             </StackLayout>
           </ViewCell>
