--- a/WebServicesFigaro/Views/ChefMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/ChefMvc/Details.cshtml
@@ -107,6 +107,14 @@
             @Html.DisplayFor(model => model.Genero)
         </dd>
 
+        <dt>
+            Comentarios
+        </dt>
+
+        <dd>
+            <a href='@string.Format("../../ComentarioChefMvc/IndexChef/{0}", Model.Id)'>Comentarios</a>
+        </dd>
+
     </dl>
 </div>
 <p>
