--- a/Figaro/Figaro/Views/VerChef.xaml
+++ b/Figaro/Figaro/Views/VerChef.xaml
@@ -69,7 +69,7 @@
         <Label Text="{Binding ChefSeleccionado.Descripcion}" FontSize="14" />
         <Label Text="Tipo de Cocina" FontSize="24" />
         <Label Text="{Binding ChefSeleccionado.TipoCocina.Titulo}" FontSize="14" />
-        <Label Text="" FontSize="24" />
+        <Label Text="Edad" FontSize="24" />
         <Label Text="{Binding ChefSeleccionado.Edad}" FontSize="14" />
         <Label Text="Ciudad/Zona" FontSize="24" />
         <Label Text="{Binding ChefSeleccionado.Zona.Titulo}" FontSize="14" />
@@ -94,6 +94,46 @@
           <Label x:Name="TabAMostrar" Text="-----------POR HACER-----------" FontSize="14" Opacity="0.7"
                  TranslationX="10" TranslationY="14"
                  HeightRequest="100"/>
+          <!--Faltaaaa-->
+          <ListView x:Name="OpinionesAMostrar"
+                     ItemsSource="{Binding ListaComentariosChef}"
+		                 HasUnevenRows="true"
+                     IsVisible="False">
+            <ListView.ItemTemplate HorizontalContentAlignment="Stretch">
+              <DataTemplate>
+                <ViewCell>
+                  <StackLayout Orientation="Horizontal" Padding="10,14">
+                    <Grid Padding="10,0,0,0">
+                      <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                      </Grid.RowDefinitions>
+                      <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                      </Grid.ColumnDefinitions>
+                      <StackLayout Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
+                        <Label Text="Por:"
+                                FontSize="16" />
+                        <!--Usuario-->
+                        <Label Text="Usuario"
+                                FontSize="16"/>
+                      </StackLayout>
+                      <!--Star rating-->
+                      <Label Text="{Binding Valoracion}" HorizontalOptions="End"
+                             Grid.Row="0" Grid.Column="2" />
+                      <Label Text="{Binding Descripcion}"
+                              FontSize="16"
+                              Opacity="0.6"
+                              Grid.Row="1"
+                              HorizontalOptions="Start"/>
+                    </Grid>
+                  </StackLayout>
+                </ViewCell>
+              </DataTemplate>
+            </ListView.ItemTemplate>
+          </ListView>
         </StackLayout>
       </ScrollView>
       
