--- a/WebServicesFigaro/Views/ComentarioChefMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/ComentarioChefMvc/Details.cshtml
@@ -35,6 +35,15 @@
             @Html.DisplayFor(model => model.Valoracion)
         </dd>
 
+        <dt>
+            Usuario
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Usuario.Nombre)
+            @Html.DisplayFor(model => model.Usuario.Apellidos)
+        </dd>
+
     </dl>
 </div>
 <p>
