--- a/WebServicesFigaro/Views/ComentarioChefMvc/Create.cshtml
+++ b/WebServicesFigaro/Views/ComentarioChefMvc/Create.cshtml
@@ -42,6 +42,16 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.UsuarioId, "UsuarioId", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("UsuarioId", null, htmlAttributes: new { @class = "form-control" })
+                @*@Html.EditorFor(model => model.Chef.Nombre, new { htmlAttributes = new { @class = "disabledClass orm-control" } })*@
+                @*@Html.DisplayFor(model => model.Chef.Apellidos, new { htmlAttributes = new { @class = "disabledClass" } })*@
+                @Html.ValidationMessageFor(model => model.UsuarioId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
