--- a/WebServicesFigaro/Views/ComentarioChefMvc/Index.cshtml
+++ b/WebServicesFigaro/Views/ComentarioChefMvc/Index.cshtml
@@ -23,6 +23,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Valoracion)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Usuario)
+        </th>
         <th></th>
     </tr>
     @if (Model.Count() > 0)
@@ -41,6 +44,10 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Valoracion)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Usuario.Nombre)
+                        @Html.DisplayFor(modelItem => item.Usuario.Apellidos)
                     </td>
                     <td>
                         @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
