--- a/Figaro/Figaro/Views/SeleccionarTipoComida.xaml
+++ b/Figaro/Figaro/Views/SeleccionarTipoComida.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Figaro.SeleccionarTipoComida"
+             x:Class="Figaro.Views.SeleccionarTipoComida"
              xmlns:local="clr-namespace:Figaro;assembly=Figaro;"
              BindingContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
              Title="Figaro"
