--- a/WebServicesFigaro/Views/PedidoMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/PedidoMvc/Details.cshtml
@@ -19,7 +19,15 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Zona.Titulo)
+            @Html.DisplayNameFor(model => model.NombreApellidos)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.NombreApellidos)
+        </dd>
+
+        <dt>
+            Zona
         </dt>
 
         <dd>
@@ -40,6 +48,30 @@
 
         <dd>
             @Html.DisplayFor(model => model.Direccion)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CP)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CP)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PrecioTotal)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PrecioTotal)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Comentario)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Comentario)
         </dd>
 
         <dt>
