--- a/WebServicesFigaro/Views/PedidoMvc/Delete.cshtml
+++ b/WebServicesFigaro/Views/PedidoMvc/Delete.cshtml
@@ -34,6 +34,14 @@
         <dd>
             @Html.DisplayFor(model => model.NPedido)
         </dd>
+        
+        <dt>
+            @Html.DisplayNameFor(model => model.NombreApellidos)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.NombreApellidos)
+        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Direccion)
@@ -41,6 +49,30 @@
 
         <dd>
             @Html.DisplayFor(model => model.Direccion)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CP)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CP)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PrecioTotal)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PrecioTotal)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Comentario)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Comentario)
         </dd>
 
         <dt>
