--- a/WebServicesFigaro/Views/PedidoMvc/Index.cshtml
+++ b/WebServicesFigaro/Views/PedidoMvc/Index.cshtml
@@ -24,6 +24,12 @@
             @Html.DisplayNameFor(model => model.Direccion)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.CP)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PrecioTotal)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Estado)
         </th>
         <th></th>
@@ -42,6 +48,12 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Direccion)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CP)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PrecioTotal)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Estado)
